--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Магазин пончиків</title>
 </head>
 <style>
-/* Стилі пиши тут :) */
+    body{
+background:yellow;
+    }
 
 </style>
 <body>
