--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ background:yellow;
 h1,img{
 text-align:center;
     color:red;
+    display:block;
+    margin: 10px auto;
+    width:fit-content;
 }
 </style>
 <body>
